# chat_negotiation

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_PLAN.md  Dockerfile  README.md  pyproject.toml
config/: crewai_agent_config.yaml  llm_config.yaml
prompts/crewai/: negotiation_coach.yaml
prompts/langchain/: negotiation_coach.yaml  negotiation_coach_with_mcp.yaml
src/: app.py  cleanup.py  config.py  ingestion.py  observability.py  prompt_loader.py
src/chroma_vectors/: make_chroma_vectors.py
src/crewai/: crew_rag_pipeline.py  crew_rag_with_mcp.py  retriever_agent.py
src/langchain/: rag_pipeline.py  rag_pipeline_with_mcp.py
src/mcp_servers/: bsw_server.py  mcp_client.py  web_search_server.py
src/retriever/: get_retriever.py
src/tools/: bsw_tool.py
tasks/crewai/: coach_task.yaml
utils/: load_config.py
